--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "composer/package-versions-deprecated": "1.11.99.2",
-        "doctrine/annotations": "^1.0",
+        "doctrine/annotations": "^1.13",
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^3.1",
         "doctrine/orm": "^2.9",
@@ -39,7 +39,7 @@
         "symfony/string": "*",
         "symfony/translation": "*",
         "symfony/twig-bundle": "^5.3",
-        "symfony/validator": "*",
+        "symfony/validator": "5.3.*",
         "symfony/web-link": "*",
         "symfony/yaml": "*",
         "twig/extra-bundle": "^2.12|^3.0",
@@ -50,7 +50,7 @@
         "symfony/browser-kit": "^5.3",
         "symfony/css-selector": "^5.3",
         "symfony/debug-bundle": "^5.3",
-        "symfony/maker-bundle": "^1.0",
+        "symfony/maker-bundle": "^1.33",
         "symfony/phpunit-bridge": "^5.3",
         "symfony/stopwatch": "^5.3",
         "symfony/var-dumper": "^5.3",
