--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -16,6 +16,7 @@ framework:
     #fragments: true
     php_errors:
         log: true
+    validation: { enabled: true }
 
 when@test:
     framework:
