--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "symfony/dotenv": "*",
         "symfony/expression-language": "*",
         "symfony/flex": "^1.3.1",
-        "symfony/form": "*",
+        "symfony/form": "5.3.*",
         "symfony/framework-bundle": "*",
         "symfony/http-client": "*",
         "symfony/intl": "*",
